--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,3 +1,3 @@
 install: 
   - FILE="-Dfile=anura-core-sdk-2.4.8.304.aar"
-  - mvn install:install-file $FILE -DgroupId=com.snapwork.sdk -DartifactId=test -Dversion=1.0 -Dpackaging=aar -DgeneratePom=true
+  - mvn install:install-file $FILE -DgroupId=com.temp.testapp -DartifactId=test -Dversion=1.0 -Dpackaging=aar -DgeneratePom=true
