--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,6 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.github.akshayj-tech</groupId>
-  <artifactId>anura_core</artifactId>
-  <version>1.1.0</version>
-  <packaging>aar</packaging>
+  <artifactId>anura-core</artifactId>
+  <version>1.4.0</version>
 </project>
